--- a/configure.in
+++ b/configure.in
@@ -236,6 +236,7 @@ AC_CHECK_FUNCS(strspn)
 AC_CHECK_FUNCS(strstr)
 AC_CHECK_FUNCS(strtoul)
 AC_CHECK_FUNCS(fpsetmask)
+AC_CHECK_FUNCS(ecvt)
 AC_CHECK_HEADERS(fcntl.h)
 AC_CHECK_HEADERS(libintl.h)
 AC_CHECK_HEADERS(stddef.h)
