Adding a pstoedit script to output to Adobe Illustrator.  Also changed the incoming ai filter to default to output ai also.
(bzr r2195)

--- a/share/extensions/Makefile.am
+++ b/share/extensions/Makefile.am
@@ -21,6 +21,7 @@ modules = \
 	svgz_input.inkmod \
 	svgz_output.inkmod \
 	ai_input.inkmod \
+	ai_output.inkmod \
 	roundhole.inkmod \
 	dropshadow.inkmod \
 	dia.inkmod \
