Added some tweaks for markers support...
(bzr r2216)

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -59,9 +59,11 @@ dist:
 	$(RMDIR) inkscape$(S)share$(S)icons$(S)CVS
 	$(RMDIR) inkscape$(S)share$(S)screens$(S)CVS
 	$(RMDIR) inkscape$(S)share$(S)extensions$(S)CVS
+	$(RMDIR) inkscape$(S)share$(S)examples$(S)CVS
 	$(RMDIR) inkscape$(S)share$(S)clipart$(S)CVS
 	$(RMDIR) inkscape$(S)share$(S)clipart$(S)road_signs$(S)CVS
 	$(RMDIR) inkscape$(S)share$(S)tutorials$(S)CVS
+	$(RMDIR) inkscape$(S)share$(S)markers$(S)CVS
 	$(CPDIR) doc inkscape$(S)doc
 	$(RMDIR) inkscape$(S)doc$(S)CVS
 	$(MKDIR) inkscape$(S)data
