Applying the markers patch from johncliff and Carl H.
Note that this introduces some instability:  Changing the marker style via
the dropdowns causes a crash on my machine.  Perhaps something isn't
installing in the right place...

(bzr r2221)

--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -78,4 +78,10 @@ clean:
 	-$(RM) inkscape*.zip
 	$(MAKE) -C src -f Makefile.mingw clean
 
+minimal:
+	$(MAKE) -C src -f Makefile.mingw
+	$(RM) inkscape$(S)inkscape.exe
+	$(CP) src$(S)inkscape.exe inkscape
+	@echo "##################### D O N E ####################"
+
 
