Making it so that the clipart and everything else gets put in the tarball, and also get installed in the share directory.  Many of these have just 'README' files, but they now have good place- holders for further development.
(bzr r2240)

--- a/configure.in
+++ b/configure.in
@@ -425,11 +425,18 @@ src/inkjar/Makefile
 doc/Makefile
 po/Makefile.in
 share/Makefile
+share/clipart/Makefile
+share/examples/Makefile
 share/extensions/Makefile
+share/fonts/Makefile
+share/gradients/Makefile
 share/icons/Makefile
-share/screens/Makefile
-share/tutorials/Makefile
+share/keyboards/Makefile
 share/markers/Makefile
+share/palettes/Makefile
+share/screens/Makefile
+share/templates/Makefile
+share/tutorials/Makefile
 inkscape.spec
 inkscape.1
 inkview.1
