--- a/configure.in
+++ b/configure.in
@@ -434,6 +434,7 @@ share/icons/Makefile
 share/keyboards/Makefile
 share/markers/Makefile
 share/palettes/Makefile
+share/patterns/Makefile
 share/screens/Makefile
 share/templates/Makefile
 share/tutorials/Makefile
