fixed capitalization of "libpng" to avoid confusion.
(bzr r2250)

--- a/configure.in
+++ b/configure.in
@@ -41,7 +41,7 @@ fi
 
 AC_CHECK_LIB(png, png_read_info, [AC_CHECK_HEADER(png.h, png_ok=yes, png_ok=no)], png_ok=no, -lz -lm)
 if test "x$png_ok" != "xyes"; then
-	AC_MSG_ERROR([Libpng is needed to compile inkscape])
+	AC_MSG_ERROR([libpng is needed to compile inkscape])
 fi
 
 AC_PATH_PROG(FREETYPE_CONFIG, freetype-config, no)
