Don't generate src/blah/Makefile, but do generate src/blah/makefile.
(bzr r2420)

--- a/configure.in
+++ b/configure.in
@@ -430,21 +430,21 @@ dnl Have to add module makefiles (lauris)
 AC_CONFIG_FILES([
 Makefile
 src/Makefile
-src/libarikkei/Makefile
-src/libnr/Makefile
-src/libnrtype/Makefile
-src/livarot/Makefile
-src/xml/Makefile
-src/svg/Makefile
-src/utest/Makefile
-src/widgets/Makefile
-src/helper/Makefile
-src/dialogs/Makefile
-src/display/Makefile
-src/extension/Makefile
-src/extension/internal/Makefile
-src/extension/implementation/Makefile
-src/inkjar/Makefile
+src/dialogs/makefile
+src/display/makefile
+src/extension/makefile
+src/extension/implementation/makefile
+src/extension/internal/makefile
+src/helper/makefile
+src/inkjar/makefile
+src/libarikkei/makefile
+src/libnr/makefile
+src/libnrtype/makefile
+src/livarot/makefile
+src/svg/makefile
+src/utest/makefile
+src/widgets/makefile
+src/xml/makefile
 doc/Makefile
 po/Makefile.in
 share/Makefile
