--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -1,19 +1,5 @@
 ## Makefile.am fragment, included by src/Makefile.am.
 
-AM_CPPFLAGS = \
-	-DINKSCAPE_VERSION=\""$(VERSION)"\"
-
-# These INKSCAPE_*DIR items really need a cleaner way to make it into
-# the subdirectories.  Unfortunately, we want them to be overridden
-# during a "make install" (I think) if the user defines "prefix" to be
-# somewhere else.  See dialogs/Makefile.am too.
-INCLUDES = \
-	-I$(srcdir) \
-	-I$(srcdir)/xml \
-	-I$(srcdir)/svg \
-	$(INKSCAPE_CFLAGS) \
-	$(GNOME_PRINT_CFLAGS)
-
 
 # ################################################
 #
@@ -38,177 +24,191 @@ endif
 #
 # ################################################
 
-bin_PROGRAMS = inkscape inkview
+libinkpre_a_CPPFLAGS =	\
+	-DINKSCAPE_VERSION=\""$(VERSION)"\"
 
-libinkscape_a_SOURCES = \
-	approx-equal.h remove-last.h \
-	arc-context.cpp arc-context.h \
-	attributes.cpp attributes.h \
-	brokenimage.xpm \
-	color.cpp color.h \
-	desktop-affine.cpp desktop-affine.h \
-	desktop.cpp desktop.h \
-	desktop-events.cpp desktop-events.h \
-	desktop-handles.cpp desktop-handles.h \
-	desktop-snap.cpp desktop-snap.h \
-	desktop-units.h \
-	dir-util.cpp dir-util.h \
-	document.cpp document.h document-private.h \
-	document-undo.cpp \
-	draw-context.cpp draw-context.h \
-	dropper-context.cpp dropper-context.h \
-	dyna-draw-context.cpp dyna-draw-context.h \
-	enums.h \
-	event-context.cpp event-context.h \
-	extract-uri.cpp extract-uri.h \
-	file.cpp file.h \
-	forward.h \
-	geom.cpp geom.h \
-	gradient-chemistry.cpp gradient-chemistry.h \
-	help.cpp help.h \
-	inkscape.cpp inkscape.h inkscape-private.h \
+# libinkpre.a: any object that's sharable between inkscape & inkview,
+# and isn't needed by object files in subdirectories (i.e. libinkpre.a
+# comes before subdirectory libraries on the link line).
+#
+# Excludes winmain.cpp (a gui wrapper around main): I'm guessing that
+# it needs to be explicitly listed as a source of each graphical
+# binary: it isn't (to my knowledge) called by main (whether directly
+# or indirectly), so I don't think that putting it in a library will
+# suffice to get it linked in.  Windows devel please confirm.  -- pjrm.
+
+libinkpre_a_SOURCES =	\
+	approx-equal.h remove-last.h	\
+	arc-context.cpp arc-context.h	\
+	attributes.cpp attributes.h	\
+	brokenimage.xpm	\
+	color.cpp color.h	\
+	desktop-affine.cpp desktop-affine.h	\
+	desktop.cpp desktop.h	\
+	desktop-events.cpp desktop-events.h	\
+	desktop-handles.cpp desktop-handles.h	\
+	desktop-snap.cpp desktop-snap.h	\
+	desktop-units.h	\
+	dir-util.cpp dir-util.h	\
+	document.cpp document.h document-private.h	\
+	document-undo.cpp	\
+	draw-context.cpp draw-context.h	\
+	dropper-context.cpp dropper-context.h	\
+	dyna-draw-context.cpp dyna-draw-context.h	\
+	enums.h	\
+	event-context.cpp event-context.h	\
+	extract-uri.cpp extract-uri.h	\
+	file.cpp file.h	\
+	forward.h	\
+	geom.cpp geom.h	\
+	help.cpp help.h	\
+	inkscape.cpp inkscape.h inkscape-private.h	\
 	inkscape-stock.cpp inkscape-stock.h\
-	interface.cpp interface.h \
-	knot.cpp knot.h \
-	knotholder.cpp knotholder.h \
-	macros.h \
+	interface.cpp interface.h	\
+	knot.cpp knot.h	\
+	knotholder.cpp knotholder.h	\
+	macros.h	\
 	marker-status.cpp marker-status.h	\
 	mod360.cpp mod360.h	\
-	node-context.cpp node-context.h \
-	nodepath.cpp nodepath.h \
-	object-edit.cpp object-edit.h \
-	object-ui.cpp object-ui.h \
-	path-chemistry.cpp path-chemistry.h \
-	preferences-skeleton.h \
+	node-context.cpp node-context.h	\
+	nodepath.cpp nodepath.h	\
+	object-edit.cpp object-edit.h	\
+	object-ui.cpp object-ui.h	\
+	path-chemistry.cpp path-chemistry.h	\
+	preferences-skeleton.h	\
 	prefs-utils.cpp prefs-utils.h\
-	print.cpp print.h \
-	rect-context.cpp rect-context.h \
-	rubberband.cpp rubberband.h \
+	print.cpp print.h	\
+	rect-context.cpp rect-context.h	\
+	rubberband.cpp rubberband.h	\
 	satisfied-guide-cns.cpp satisfied-guide-cns.h	\
-	select-context.cpp select-context.h \
-	selection-chemistry.cpp selection-chemistry.h \
-	selection.cpp selection.h \
+	select-context.cpp select-context.h	\
+	selection-chemistry.cpp selection-chemistry.h	\
+	selection.cpp selection.h	\
 	select-toolbar.cpp select-toolbar.h\
-	seltrans.cpp seltrans.h \
-	seltrans-handles.cpp seltrans-handles.h \
-	shortcuts.cpp shortcuts.h \
-	slideshow.cpp slideshow.h \
-	sp-anchor.cpp sp-anchor.h \
-	sp-animation.cpp sp-animation.h \
-	sp-chars.cpp sp-chars.h \
-	sp-clippath.cpp sp-clippath.h \
-	sp-cursor.cpp sp-cursor.h \
-	sp-defs.cpp sp-defs.h \
-	sp-ellipse.cpp sp-ellipse.h \
-	sp-gradient.cpp sp-gradient.h \
+	seltrans.cpp seltrans.h	\
+	seltrans-handles.cpp seltrans-handles.h	\
+	shortcuts.cpp shortcuts.h	\
+	slideshow.cpp slideshow.h	\
+	sp-anchor.cpp sp-anchor.h	\
+	sp-animation.cpp sp-animation.h	\
+	sp-chars.cpp sp-chars.h	\
+	sp-clippath.cpp sp-clippath.h	\
+	sp-cursor.cpp sp-cursor.h	\
+	sp-defs.cpp sp-defs.h	\
+	sp-ellipse.cpp sp-ellipse.h	\
+	sp-gradient.cpp sp-gradient.h	\
 	sp-guide-attachment.h	\
 	sp-guide-constraint.h	\
-	sp-guide.cpp sp-guide.h \
-	sp-image.cpp sp-image.h \
-	spiral-context.cpp spiral-context.h \
-	sp-item.cpp sp-item.h \
-	sp-item-group.cpp sp-item-group.h \
-	sp-item-notify-moveto.cpp sp-item-notify-moveto.h \
+	sp-guide.cpp sp-guide.h	\
+	sp-image.cpp sp-image.h	\
+	spiral-context.cpp spiral-context.h	\
+	sp-item.cpp sp-item.h	\
+	sp-item-group.cpp sp-item-group.h	\
+	sp-item-notify-moveto.cpp sp-item-notify-moveto.h	\
 	sp-item-rm-unsatisfied-cns.cpp sp-item-rm-unsatisfied-cns.h	\
-	sp-item-transform.cpp sp-item-transform.h \
+	sp-item-transform.cpp sp-item-transform.h	\
 	sp-item-update-cns.cpp sp-item-update-cns.h	\
-	sp-line.cpp sp-line.h \
-	splivarot.cpp splivarot.h \
-	sp-marker.cpp sp-marker.h \
-	sp-mask.cpp sp-mask.h \
-	sp-metrics.cpp sp-metrics.h \
-	sp-namedview.cpp sp-namedview.h \
-	sp-object.cpp sp-object.h \
-	sp-object-group.cpp sp-object-group.h \
-	sp-object-repr.cpp sp-object-repr.h \
-	sp-offset.cpp sp-offset.h \
-	sp-paint-server.cpp sp-paint-server.h \
-	sp-path.cpp sp-path.h \
-	sp-pattern.cpp sp-pattern.h \
-	sp-polygon.cpp sp-polygon.h \
-	sp-polyline.cpp sp-polyline.h \
-	sp-rect.cpp sp-rect.h \
-	sp-root.cpp sp-root.h \
-	sp-shape.cpp sp-shape.h \
-	sp-spiral.cpp sp-spiral.h \
-	sp-star.cpp sp-star.h \
-	sp-symbol.cpp sp-symbol.h \
-	sp-text.cpp sp-text.h \
-	sp-use.cpp sp-use.h \
-	star-context.cpp star-context.h \
-	streams-gzip.h streams-gzip.cpp \
-	streams-handles.h streams-handles.cpp \
-	streams-zlib.h streams-zlib.cpp \
-	streams-jar.h streams-jar.cpp \
-	style.cpp style.h \
-	svg-view.cpp svg-view.h \
-	text-context.cpp text-context.h \
-	toolbox.cpp toolbox.h \
+	sp-line.cpp sp-line.h	\
+	splivarot.cpp splivarot.h	\
+	sp-marker.cpp sp-marker.h	\
+	sp-mask.cpp sp-mask.h	\
+	sp-metrics.cpp sp-metrics.h	\
+	sp-namedview.cpp sp-namedview.h	\
+	sp-object.cpp sp-object.h	\
+	sp-object-group.cpp sp-object-group.h	\
+	sp-object-repr.cpp sp-object-repr.h	\
+	sp-offset.cpp sp-offset.h	\
+	sp-paint-server.cpp sp-paint-server.h	\
+	sp-path.cpp sp-path.h	\
+	sp-pattern.cpp sp-pattern.h	\
+	sp-polygon.cpp sp-polygon.h	\
+	sp-polyline.cpp sp-polyline.h	\
+	sp-rect.cpp sp-rect.h	\
+	sp-root.cpp sp-root.h	\
+	sp-shape.cpp sp-shape.h	\
+	sp-spiral.cpp sp-spiral.h	\
+	sp-star.cpp sp-star.h	\
+	sp-symbol.cpp sp-symbol.h	\
+	sp-text.cpp sp-text.h	\
+	sp-use.cpp sp-use.h	\
+	star-context.cpp star-context.h	\
+	streams-gzip.h streams-gzip.cpp	\
+	streams-handles.h streams-handles.cpp	\
+	streams-zlib.h streams-zlib.cpp	\
+	streams-jar.h streams-jar.cpp	\
+	style.cpp style.h	\
+	svg-view.cpp svg-view.h	\
+	text-context.cpp text-context.h	\
+	toolbox.cpp toolbox.h	\
 	tools-switch.cpp tools-switch.h\
-	uri.cpp uri.h \
-	uri-references.cpp uri-references.h \
-	verbs.cpp verbs.h \
-	version.cpp version.h \
-	view.cpp view.h \
-	$(win32_sources) \
+	uri.cpp uri.h	\
+	uri-references.cpp uri-references.h	\
+	verbs.cpp verbs.h	\
+	version.cpp version.h	\
+	view.cpp view.h	\
 	zoom-context.cpp zoom-context.h
 
-inkscape_private_libs = \
-	dialogs/libspdialogs.a \
-	xml/libspxml.a \
-	svg/libspsvg.a \
-	widgets/libspwidgets.a \
-	display/libspdisplay.a \
-	helper/libspchelp.a \
-	libnrtype/libnrtype.a \
-	libnr/libnr.a \
-	libarikkei/libarikkei.a \
-	livarot/libvarot.a \
-	extension/libextension.a \
-	extension/implementation/libimplementation.a \
-	extension/internal/libinternal.a \
-	$(inkjar_libs)
+# libinkpost.a: Any object file that needs to be near the end of the link line.
+# gradient-chemistry.o is called by some things in display/.
+libinkpost_a_SOURCES =	\
+	gradient-chemistry.cpp gradient-chemistry.h
 
-all_libs = \
-	$(inkscape_private_libs) \
-	$(INKSCAPE_LIBS) \
-	$(GNOME_PRINT_LIBS) \
-	$(XFT_LIBS) \
-	$(FREETYPE_LIBS) \
-	$(kdeldadd) \
+inkscape_private_libs =	\
+	libinkpre.a	\
+	dialogs/libspdialogs.a	\
+	xml/libspxml.a	\
+	svg/libspsvg.a	\
+	widgets/libspwidgets.a	\
+	display/libspdisplay.a	\
+	helper/libspchelp.a	\
+	libnrtype/libnrtype.a	\
+	libnr/libnr.a	\
+	libarikkei/libarikkei.a	\
+	livarot/libvarot.a	\
+	extension/libextension.a	\
+	extension/implementation/libimplementation.a	\
+	extension/internal/libinternal.a	\
+	$(inkjar_libs)	\
+	libinkpost.a
+
+all_libs =	\
+	$(inkscape_private_libs)	\
+	$(INKSCAPE_LIBS)	\
+	$(GNOME_PRINT_LIBS)	\
+	$(XFT_LIBS)	\
+	$(FREETYPE_LIBS)	\
+	$(kdeldadd)	\
 	$(win32ldflags)
 
+libinkpre_a-desktop.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-document.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-inkscape.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-knot.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-selection.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-sp-object.$(OBJEXT): helper/sp-marshal.h
+libinkpre_a-view.$(OBJEXT): helper/sp-marshal.h
 
-inkscape_SOURCES = \
-	$(libinkscape_a_SOURCES) \
-	main.cpp
 
-inkscape_LDADD = \
-	$(all_libs)
+# ################################################
+#
+#  B I N A R I E S
+#
+# ################################################
 
+
+inkscape_SOURCES = main.cpp $(win32_sources)
+inkscape_LDADD = $(all_libs)
 inkscape_LDFLAGS = --export-dynamic $(kdeldflags)
 
-
-
-# ################################################
-#
-#  I N K V I E W
-#
-# ################################################
-
-
-inkview_SOURCES = \
-	$(libinkscape_a_SOURCES) \
-	inkview.cpp
-
-
-inkview_LDADD = \
-	$(all_libs)	\
-	$(inkjar_libs)
-
+inkview_SOURCES = inkview.cpp $(win32_sources)
+inkview_LDADD = $(all_libs)
 
 mod360_test_SOURCES = mod360-test.cpp
 mod360_test_LDADD = libinkscape.a -lglib-2.0
 
 extract_uri_test_SOURCES = extract-uri-test.cpp
 extract_uri_test_LDADD = libinkscape.a -lglib-2.0
+
+# Not yet used.  I intend to enable this very soon.
+#version.h: ../configure.in
+#	echo '#define INKSCAPE_VERSION "$(VERSION)"' > version.h
