Get rid of now-redundant $(INKSCAPE_CFLAGS) from *_CPPFLAGS.
(bzr r2439)

--- a/src/dialogs/Makefile_insert
+++ b/src/dialogs/Makefile_insert
@@ -14,8 +14,7 @@ dialogs/clean:
 	rm -f dialogs/libspdialogs.a $(dialogs_libspdialogs_a_OBJECTS)
 
 dialogs_libspdialogs_a_CPPFLAGS = \
-	-I$(top_srcdir)/src/dialogs \
-	$(INKSCAPE_CFLAGS)
+	-I$(top_srcdir)/src/dialogs
 
 dialogs_libspdialogs_a_SOURCES = \
 	dialogs/align.cpp	\
