Change to less general but working version of % target.
(bzr r2441)

--- a/src/display/makefile.in
+++ b/src/display/makefile.in
@@ -6,7 +6,12 @@
 all:
 	cd .. && $(MAKE) display/all
 
-%:
+clean %.a %.o:
 	cd .. && $(MAKE) display/$@
 
 .PHONY: all clean
+
+OBJEXT = @OBJEXT@
+
+.SUFFIXES:
+.SUFFIXES: .a .$(OBJEXT)
