--- a/src/inkjar/makefile.in
+++ b/src/inkjar/makefile.in
@@ -6,7 +6,12 @@
 all:
 	cd .. && $(MAKE) inkjar/all
 
-%:
+clean %.a %.o:
 	cd .. && $(MAKE) inkjar/$@
 
 .PHONY: all clean
+
+OBJEXT = @OBJEXT@
+
+.SUFFIXES:
+.SUFFIXES: .a .$(OBJEXT)
