* src/Makefile_include, src/prefix.cpp:
Removing the redefition of NULL and adding to the make system.

* src/extension/db.cpp, src/extension/db.h, src/extension/extension.cpp,
src/extension/extension.h, src/extension/init.cpp,
src/extension/internal/eps-out.cpp, src/extension/internal/eps-out.h,
src/extension/internal/ps-out.cpp, src/extension/internal/ps-out.h:

Adding in more checks for individual extensions.  All of them
should still pass though.  Also, moved the extension database from
glib to STL.  This allows extensions to be deleted while using the
foreach functions (which causes instability with the glib hash
table).

(bzr r2454)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -73,7 +73,8 @@ libinkpre_a_SOURCES =	\
 	object-ui.cpp object-ui.h	\
 	path-chemistry.cpp path-chemistry.h	\
 	preferences-skeleton.h	\
-	prefs-utils.cpp prefs-utils.h\
+	prefs-utils.cpp prefs-utils.h \
+	prefix.cpp prefix.h \
 	print.cpp print.h	\
 	rect-context.cpp rect-context.h	\
 	rubberband.cpp rubberband.h	\
