--- a/src/libnr/Makefile_insert
+++ b/src/libnr/Makefile_insert
@@ -21,6 +21,7 @@ libnr_libnr_a_SOURCES =	\
 	libnr/nr-compose-transform.h	\
 	libnr/nr-compose.cpp	\
 	libnr/nr-compose.h	\
+	libnr/nr-convex-hull.h	\
 	libnr/nr-coord.h	\
 	libnr/nr-dim2.h	\
 	libnr/nr-forward.h	\
