--- a/share/tutorials/Makefile.am
+++ b/share/tutorials/Makefile.am
@@ -3,6 +3,7 @@ tutorialdir = $(datadir)/inkscape/tutorials
 
 tutorial_DATA = \
     tutorial-basic.svg \
+    tutorial-basic.fr.svg \
     tutorial-basic.ru.svg \
     tutorial-advanced.svg \
     elementsofdesign.svg \
