--- a/share/tutorials/Makefile.am
+++ b/share/tutorials/Makefile.am
@@ -6,6 +6,7 @@ tutorial_DATA = \
     tutorial-basic.fr.svg \
     tutorial-basic.ru.svg \
     tutorial-advanced.svg \
+    tutorial-advanced.fr.svg \
     elementsofdesign.svg \
     tipsandtricks.svg
 
