--- a/configure.in
+++ b/configure.in
@@ -217,11 +217,17 @@ else
 fi
 AM_CONDITIONAL(INKJAR, test "$with_ij" = "yes")
 
+ink_spell_pkg=
+if pkg-config --exists gtkspell-2.0; then
+	ink_spell_pkg=gtkspell-2.0
+	AC_DEFINE(WITH_GTKSPELL, 1, [enable gtk spelling widget])
+fi
+
 dnl ******************************
 dnl   Unconditional dependencies
 dnl ******************************
 
-PKG_CHECK_MODULES(INKSCAPE, gtk+-2.0 >= 2.0.0  libxml-2.0 >= 2-2.4.24  sigc++-1.2  gtkmm-2.0)
+PKG_CHECK_MODULES(INKSCAPE, gtk+-2.0 >= 2.0.0  libxml-2.0 >= 2-2.4.24  sigc++-1.2  gtkmm-2.0 $ink_spell_pkg)
 INKSCAPE_LIBS="$INKSCAPE_LIBS $POPT_LIBS -lpng -lz"
 
 dnl Check for bind_textdomain_codeset, including -lintl if GLib brings it in.
