--- a/src/extension/internal/Makefile_insert
+++ b/src/extension/internal/Makefile_insert
@@ -28,5 +28,7 @@ extension_internal_libinternal_a_SOURCES =	\
 	extension/internal/ps-out.cpp	\
 	extension/internal/eps-out.h	\
 	extension/internal/eps-out.cpp	\
+	extension/internal/gdkpixbuf-input.h	\
+	extension/internal/gdkpixbuf-input.cpp	\
 	$(extension_internal_gnome_print_sources)
 
