--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -131,6 +131,8 @@ libinkpre_a_SOURCES =	\
 	sp-text.cpp sp-text.h	\
 	sp-typeset.cpp sp-typeset.h	\
 	sp-typeset-layout.cpp sp-typeset.h	\
+	sp-typeset-kplayout.cpp sp-typeset.h	\
+	sp-typeset-utils.cpp sp-typeset-utils.h	\
 	sp-use.cpp sp-use.h	\
 	star-context.cpp star-context.h	\
 	streams-gzip.h streams-gzip.cpp	\
