--- a/src/xml/Makefile_insert
+++ b/src/xml/Makefile_insert
@@ -25,4 +25,4 @@ xml_libspxml_a_SOURCES =	\
 
 xml_repr_action_test_SOURCES = xml/repr-action-test.cpp
 
-xml_repr_action_test_LDADD = xml/libspxml.a $(INKSCAPE_LIBS)
+xml_repr_action_test_LDADD = xml/libspxml.a libinkpost.a $(INKSCAPE_LIBS)
