--- a/src/xml/Makefile_insert
+++ b/src/xml/Makefile_insert
@@ -21,7 +21,8 @@ xml_libspxml_a_SOURCES =	\
 	xml/repr-private.h	\
 	xml/repr-util.cpp	\
 	xml/repr.cpp	\
-	xml/repr.h
+	xml/repr.h	\
+	xml/xml-forward.h
 
 xml_repr_action_test_SOURCES = xml/repr-action-test.cpp
 
