--- a/src/display/Makefile_insert
+++ b/src/display/Makefile_insert
@@ -32,8 +32,8 @@ display/clean:
 #nr_sources =
 #endif
 
-canvas-arena.$(OBJEXT): helper/sp-marshal.h
-sp-canvas.$(OBJEXT): helper/sp-marshal.h
+canvas-arena.$(OBJEXT) display/canvas-arena.$(OBJEXT): helper/sp-marshal.h
+sp-canvas.$(OBJEXT) display/sp-canvas.$(OBJEXT): helper/sp-marshal.h
 
 display_libspdisplay_a_SOURCES = \
 	display/nr-arena-forward.h	\
