decoupled seltrans and selcue so that the latter can be used outside of selector; enabled selcue in dropper
(bzr r2831)

--- a/src/Makefile_insert
+++ b/src/Makefile_insert
@@ -84,6 +84,7 @@ libinkpre_a_SOURCES =	\
 	selection.cpp selection.h	\
 	select-toolbar.cpp select-toolbar.h\
 	seltrans.cpp seltrans.h	\
+	selcue.cpp selcue.h \
 	seltrans-handles.cpp seltrans-handles.h	\
 	shortcuts.cpp shortcuts.h	\
 	slideshow.cpp slideshow.h	\
